# Smoothify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_water.py
examples/: merge_holes_examples.ipynb  real_world_water_example.ipynb  smoothify_vs_shapely_comparison.ipynb  usage_examples.ipynb
fuzz/: __init__.py  generators.py  oracle.py  runner.py
images/: generate_example_images.ipynb  generate_pipeline_graphic.py
scripts/: fuzz_run.py  fuzz_visualize.py
smoothify/: __init__.py  _chaikin.pyi  coordinator.py  geometry_ops.py  smoothify_core.py
src/: _chaikin.pyx
tests/: test_all_geometry_types.py  test_area_tolerance.py  test_auto_segment_length.py  test_congruence_dedup.py  test_convexity_artifacts.py  test_corner_rounding.py  test_edge_cases_coverage.py  test_fuzz.py  test_geometry_types.py  test_invalid_polygon.py  test_merge_holes.py  test_real_world_data.py  test_self_intersecting_variant.py  test_smoothify_api.py  test_smoothify_core.py  test_synthetic_blob_fuzz.py  test_water_quality_sweep.py  visual_tests.ipynb
tests/test_data/: convex_pixel_rectangle.gpkg
